# msc

./: .gitignore  CMakeLists.txt  flake.nix
include/: ansi.hpp  chord-policies.hpp  chromatic-scales.hpp  cli-utils.hpp  cli-utils.ipp  fnv1a.hpp  fnv1a.ipp  key-properties.hpp  key-properties.ipp  key_intervals.hpp  music.hpp  music.ipp  search.hpp  sharp-flat.hpp  string_append.hpp  tonic-offsets.hpp
src/: main.cpp  search.cpp
